Add name field to Player class